--- a/src/patients.html
+++ b/src/patients.html
@@ -9,12 +9,12 @@
         <td>{{name}}</td>
       </tr>
     </script>
+    <script id="div-template" type="text/x-handlebars-template">
+      <div>{{value}}</div>
+    </script>
 
   </head>
   <body>
-    <div id='search-container'>
-      <input type='text' id='search'></input><input type='button'></input>
-    </div>
     <table id='patients-table'>
       <thead>
         <tr>
@@ -24,6 +24,7 @@
       <tbody>
       </tbody>
     </table>
+    <script type='text/javascript' src='models.js'></script>
     <script type='text/javascript' src='patients.js'></script>
   </body>
 </html>
