--- a/src/summary.html
+++ b/src/summary.html
@@ -15,8 +15,10 @@
 (function () {
  var _DB_ERROR;
  var _DB;
- var _read, _show;
- var _el, _e2;
+ var _test, _read, _show;
+ var _mrn;
+ var _el, _e3, _man, _mrni, _loadb;
+ var _forceLoad;
 
  _DB_TRANS_ERROR = function (_Error) {
   console.log("SQL Transaction error (" + _Error.code  + ")");
@@ -35,28 +37,76 @@
 
  _read = function () {
   _DB.transaction (function (_Transaction) {
-   _Transaction.executeSql("select * from summaries where patient = 3 order by date desc limit 1", [], function (__Transaction, __Result) {
-    _DB.transaction (function (_Transaction) {
-     _Transaction.executeSql("select * from summaries inner join summaryValues on summaries.rowid = summaryValues.summary inner join dataPoints on summaryValues.dataPoint = dataPoints.rowid where summaries.rowid = " + __Result.rows.item(0).id, [], _show, _DB_EXEC_ERROR);
-    }, _DB_TRANS_ERROR, null);
+   _Transaction.executeSql("select * from summaries where patient = " + _mrn, [], function (__Transaction, __Result) {
+    if (__Result.rows.length > 0) {
+     _DB.transaction (function (___Transaction) {
+      ___Transaction.executeSql("select * from summaries where patient = " + _mrn + " order by date desc limit 1", [], function (____Transaction, __Result) {
+       _DB.transaction (function (_____Transaction) {
+        _____Transaction.executeSql("select * from summaries inner join summaryValues on summaries.rowid = summaryValues.summary inner join dataPoints on summaryValues.dataPoint = dataPoints.rowid inner join fields on dataPoints.type = fields.name where summaries.rowid = " + __Result.rows.item(0).id + " order by fields.sortOrder", [], _show, _DB_EXEC_ERROR);
+       }, _DB_TRANS_ERROR, null);
+      }, _DB_EXEC_ERROR);
+     }, _DB_TRANS_ERROR, null);
+    } else {
+     _e2 = document.createElement("div");
+     _el.appendChild(_e2);
+     _e2.appendChild(document.createTextNode("Patient not found."));
+    }
    }, _DB_EXEC_ERROR);
   }, _DB_TRANS_ERROR, null);
- }
+ };
 
  _show = function (_Transaction, _Result) {
-  var __l = _Result.rows.length;
+  var __l;
   var __n;
-
-
-  for (__n = 0; __n < __l; __n++) {
-   console.log("Row = " + __n + " ID = " + _Result.rows.item(__n).field + " R =  " + _Result.rows.item(__n).result);
-console.log(_Result.rows.item(__n));
+  var __text;
+  for (__n = 0, __l = _Result.rows.length; __n < __l; __n++) {
+   console.log("Row / ID = " + __n + " Field = " + _Result.rows.item(__n).field + " Result = " + _Result.rows.item(__n).result);
+   _e2 = document.createElement("div");
+   if (_Result.rows.item(__n).result.indexOf('\n') == -1) {
+    _el.appendChild(_e2);
+    _e3 = document.createElement("span");
+    _e3.appendChild(document.createTextNode(_Result.rows.item(__n).field + ": "));
+    _e3.style.fontWeight = "bold";
+    _e2.appendChild(_e3);
+    _e3 = document.createElement("span");
+    _e3.appendChild(document.createTextNode(_Result.rows.item(__n).result));
+    _e2.appendChild(_e3);
+   } else {
+    _el.appendChild(_e2);
+    _e3 = document.createElement("div");
+    _e3.appendChild(document.createTextNode(_Result.rows.item(__n).field + ":"));
+    _e3.style.fontWeight = "bold";
+    _e2.appendChild(_e3);
+    _e3 = document.createElement("div");
+    _e3.innerHTML = _Result.rows.item(__n).result.replace(/&/g, "&amp;").replace(/</g, "&lt;").replace(/>/g, "&gt;").replace(/\n/g, "<br>\n");
+    _e3.style.padding = "1ex";
+    _e2.appendChild(_e3);
+   }
   }
+  _loadb.removeEventListener("click", _forceLoad, false);
+  _el.removeChild(_man);
+ };
 
+ _forceLoad = function () {_mrn = _mrni.value; _read();};
+
+ if (typeof localStorage.mrn === "undefined") {
+  _man = document.createElement("div");
+  _el.appendChild(_man);
+  _man.appendChild(document.createTextNode("MRN: "));
+  _mrni = document.createElement("input");
+  _mrni.type = "text";
+  _man.appendChild(_mrni);
+  _mrni.value = "1";
+  _mrni.style.textAlign = "right";
+  _mrni.style.border = "1px solid #c0c0c0";
+  _loadb = document.createElement("button");
+  _loadb.appendChild(document.createTextNode("load"));
+  _man.appendChild(_loadb);
+  _loadb.addEventListener("click", _forceLoad, false);
+ } else {
+  _mrn = localStorage.mrn;
+  _read();
  }
-
- _read();
-
 
 })();
 
