--- a/src/summary.html
+++ b/src/summary.html
@@ -37,12 +37,12 @@
 
  _read = function () {
   _DB.transaction (function (_Transaction) {
-   _Transaction.executeSql("select * from summaries where patient = " + _mrn, [], function (__Transaction, __Result) {
+   _Transaction.executeSql("select * from summaries where patient_id = " + _mrn, [], function (__Transaction, __Result) {
     if (__Result.rows.length > 0) {
      _DB.transaction (function (___Transaction) {
-      ___Transaction.executeSql("select * from summaries where patient = " + _mrn + " order by date desc limit 1", [], function (____Transaction, __Result) {
+      ___Transaction.executeSql("select * from summaries where patient_id = " + _mrn + " order by date desc limit 1", [], function (____Transaction, __Result) {
        _DB.transaction (function (_____Transaction) {
-        _____Transaction.executeSql("select * from summaries inner join summaryValues on summaries.rowid = summaryValues.summary inner join dataPoints on summaryValues.dataPoint = dataPoints.rowid inner join fields on dataPoints.type = fields.name where summaries.rowid = " + __Result.rows.item(0).id + " order by fields.sortOrder", [], _show, _DB_EXEC_ERROR);
+        _____Transaction.executeSql("select * from summaries inner join summaryValues on summaries.rowid = summaryValues.summary_id inner join dataPoints on summaryValues.dataPoint = dataPoints.rowid inner join fields on dataPoints.field_id = fields.label where summaries.rowid = " + __Result.rows.item(0).id + " order by fields.sortOrder", [], _show, _DB_EXEC_ERROR);
        }, _DB_TRANS_ERROR, null);
       }, _DB_EXEC_ERROR);
      }, _DB_TRANS_ERROR, null);
@@ -60,25 +60,25 @@
   var __n;
   var __text;
   for (__n = 0, __l = _Result.rows.length; __n < __l; __n++) {
-   console.log("Row / ID = " + __n + " Field = " + _Result.rows.item(__n).field + " Result = " + _Result.rows.item(__n).result);
+   console.log("Row / ID = " + __n + " Field = " + _Result.rows.item(__n).field_id + " Value = " + _Result.rows.item(__n).value);
    _e2 = document.createElement("div");
-   if (_Result.rows.item(__n).result.indexOf('\n') == -1) {
+   if (_Result.rows.item(__n).value.indexOf('\n') == -1) {
     _el.appendChild(_e2);
     _e3 = document.createElement("span");
-    _e3.appendChild(document.createTextNode(_Result.rows.item(__n).field + ": "));
+    _e3.appendChild(document.createTextNode(_Result.rows.item(__n).field_id + ": "));
     _e3.style.fontWeight = "bold";
     _e2.appendChild(_e3);
     _e3 = document.createElement("span");
-    _e3.appendChild(document.createTextNode(_Result.rows.item(__n).result));
+    _e3.appendChild(document.createTextNode(_Result.rows.item(__n).value));
     _e2.appendChild(_e3);
    } else {
     _el.appendChild(_e2);
     _e3 = document.createElement("div");
-    _e3.appendChild(document.createTextNode(_Result.rows.item(__n).field + ":"));
+    _e3.appendChild(document.createTextNode(_Result.rows.item(__n).field_id + ":"));
     _e3.style.fontWeight = "bold";
     _e2.appendChild(_e3);
     _e3 = document.createElement("div");
-    _e3.innerHTML = _Result.rows.item(__n).result.replace(/&/g, "&amp;").replace(/</g, "&lt;").replace(/>/g, "&gt;").replace(/\n/g, "<br>\n");
+    _e3.innerHTML = _Result.rows.item(__n).value.replace(/&/g, "&amp;").replace(/</g, "&lt;").replace(/>/g, "&gt;").replace(/\n/g, "<br>\n");
     _e3.style.padding = "1ex";
     _e2.appendChild(_e3);
    }
