fix zhao’s merge also allow creation of models without columns get querystring params

--- a/src/patients.html
+++ b/src/patients.html
@@ -15,6 +15,9 @@
 
   </head>
   <body>
+    <div id='new-patient'>
+      <input id='add-patient' type='button' value='add'>
+    </div>
     <table id='patients-table'>
       <thead>
         <tr>
