reset db funcitonality

--- a/src/patients.html
+++ b/src/patients.html
@@ -24,8 +24,9 @@
       <tbody>
       </tbody>
     </table>
-    <div id='new-patient'>
-      <input id='add-patient' type='button' value='add'>
+    <div id='tools'>
+      <input id='add-patient' type='button' value='add patient'>
+      <input id='reset-database' type='button' value='reset db'>
     </div>
     <script type='text/javascript' src='models.js'></script>
     <script type='text/javascript' src='patients.js'></script>
