--- a/src/summary.html
+++ b/src/summary.html
@@ -17,9 +17,11 @@
 (function () {
  var _DB_ERROR;
  var _DB;
- var _test, _read, _show;
+ var _test, _read, _show, _full;
+ var _updateSummary;
+ var _summary, _sid;
  var _mrn;
- var _el, _e3, _man, _mrni, _loadb;
+ var _el, _e2, _e3, _e4, _man, _mrni, _loadb, _updates = [];
  var _forceLoad;
  var _YYYYMMDD;
 
@@ -57,6 +59,7 @@
      _DB.transaction (function (___Transaction) {
       ___Transaction.executeSql("select * from summaries where patient_id = " + _mrn + " order by date desc limit 1", [], function (____Transaction, __Result) {
        _DB.transaction (function (_____Transaction) {
+        _sid = __Result.rows.item(0).id;
         _____Transaction.executeSql("select * from summaries inner join summaryValues on summaries.rowid = summaryValues.summary_id inner join dataPoints on summaryValues.dataPoint = dataPoints.rowid inner join fields on dataPoints.field_id = fields.label where summaries.rowid = " + __Result.rows.item(0).id + " order by fields.sortOrder", [], _show, _DB_EXEC_ERROR);
        }, _DB_TRANS_ERROR, null);
       }, _DB_EXEC_ERROR);
@@ -64,13 +67,14 @@
     } else {
      _e2 = document.createElement("div");
      _el.appendChild(_e2);
-     _e2.appendChild(document.createTextNode("Patient not found."));
+     _e2.appendChild(document.createTextNode("No summary for this patient ID."));
      _e2 = document.createElement("div");
      _el.appendChild(_e2);
      _e3 = document.createElement("a");
-     _e3.appendChild(document.createTextNode("[create new record]"));
+     _e3.appendChild(document.createTextNode("[update / create new record]"));
      _e3.href = "dataentry.html?id=" + _mrn.toString(10);
      _e2.appendChild(_e3);
+     _full();
     }
    }, _DB_EXEC_ERROR);
   }, _DB_TRANS_ERROR, null);
@@ -79,6 +83,7 @@
  _show = function (_Transaction, _Result) {
   var __l;
   var __n;
+  _summary = _Result.rows;
   for (__n = 0, __l = _Result.rows.length; __n < __l; __n++) {
    console.log("Row / ID = " + __n + " Field = " + _Result.rows.item(__n).field_id + " Value = " + _Result.rows.item(__n).value);
    _e2 = document.createElement("div");
@@ -114,17 +119,23 @@ value.indexOf('\n') == -1) {
    _loadb.removeEventListener("click", _forceLoad, false);
    _el.removeChild(_man);
   }
+  _full();
+ };
+
+ _full = function () {
   _e2 = document.createElement("h1");
   _el.appendChild(_e2);
   _e2.appendChild(document.createTextNode("Full Record"));
   _DB.transaction (function (__Transaction) {
-   __Transaction.executeSql("select * from dataPoints where patient_id = " + _mrn.toString(10) + " and status = 1 order by timeFor", [], function (___Transaction, ___Result) {
+   __Transaction.executeSql("select * from dataPoints where patient_id = " + _mrn.toString(10) + " and status = \"valid\" order by timeFor", [], function (___Transaction, ___Result) {
     var ___l;
     var ___n;
     for (___n = 0, ___l = ___Result.rows.length; ___n < ___l; ___n++) {
      _e2 = document.createElement("div");
+     _e2.style.border = "2px solid #c0c0c0";
+     _e2.style.margin = "2px";
+     _el.appendChild(_e2);
      if (___Result.rows.item(___n).value.indexOf('\n') == -1) {
-      _el.appendChild(_e2);
       _e3 = document.createElement("span");
       _e3.appendChild(document.createTextNode("[" + _YYYYMMDD(new Date(___Result.rows.item(___n).timeFor * 1000)) + "] " + ___Result.rows.item(___n).field_id + ": "));
       _e3.style.fontWeight = "bold";
@@ -133,7 +144,6 @@ value.indexOf('\n') == -1) {
       _e3.appendChild(document.createTextNode(___Result.rows.item(___n).value));
       _e2.appendChild(_e3);
      } else {
-      _el.appendChild(_e2);
       _e3 = document.createElement("div");
       _e3.appendChild(document.createTextNode("[" + _YYYYMMDD(new Date(___Result.rows.item(___n).timeFor * 1000)) + "] " + ___Result.rows.item(___n).field_id + ":"));
       _e3.style.fontWeight = "bold";
@@ -143,15 +153,78 @@ value.indexOf('\n') == -1) {
       _e3.style.padding = "1ex";
       _e2.appendChild(_e3);
      }
+     _e3 = document.createElement("div");
+     _e2.appendChild(_e3);
+     _e4 = document.createElement("input");
+     _e4.type = "checkbox";
+     _updates[___n] = {
+      e: _e4,
+      l: ___Result.rows.item(___n).field_id,
+      id: ___Result.rows.item(___n).id
+     };
+     _e3.appendChild(_e4);
+     _e3.appendChild(document.createTextNode("use for new summary"));
+     _e3.style.backgroundColor = "#c0c0c0";
     }
+    _e2 = document.createElement("div");
+    _el.appendChild(_e2);
+    _e3 = document.createElement("button");
+    _e3.appendChild(document.createTextNode("update summary"));
+    _e2.appendChild(_e3);
+    _e3.addEventListener("click", function () {
+     var ____n, ____nn;
+     var ____s = [];
+     var ____u;
+     for (____nn = 0; ____nn < _summary.length; ____nn++) {
+      ____s[____nn] = {
+       l: _summary.item(____nn).field_id,
+       dp: _summary.item(____nn).dataPoint
+      }
+     }
+     for (____n = 0; ____n < _updates.length; ____n++) {
+      if (_updates[____n].e.checked) {
+       ____u = false;
+       for (____nn = 0; ____nn < ____s.length; ____nn++) {
+        if (____s[____nn].l == _updates[____n].l) {
+         ____s[____nn].dp = _updates[____n].id;
+         ____u = true;
+        }
+       }
+       if (!____u) {
+        ____s[____nn] = {
+         l: _updates[____n].l,
+         dp: _updates[____n].id
+        }
+       }
+       console.log(_updates[____n].id);
+      }
+     }
+console.log(____s[0]);
+console.log(____s[1]);
+     _updateSummary(____s);
+    }, false);
+   }, _DB_EXEC_ERROR);
+  }, _DB_TRANS_ERROR, null);
+ };
+
+ _updateSummary = function (_S) {
+  _DB.transaction(function (__Transaction) {
+   var __d;
+   var __n, __l;
+   __Transaction.executeSql("insert into summaries (patient_id, date) values (" + _mrn.toString(10) + ", " + (d = new Date().getTime().toString(10)) + ")", [], null, _DB_EXEC_ERROR);
+   __Transaction.executeSql("select * from summaries where patient_id = " + _mrn.toString(10) + " and date = " + d, [], function (___Transaction, ___Result) {
+    for (__n = 0, __l = _S.length; __n < __l; __n++) {
+     __Transaction.executeSql("insert into summaryValues (summary_id, field_id, dataPoint) values (" + ___Result.rows.item(0).id + ", \"" + _S[__n].l + "\", " + _S[__n].dp + ")", [], null, _DB_EXEC_ERROR);
+    }
+
    }, _DB_EXEC_ERROR);
   }, _DB_TRANS_ERROR, null);
  };
 
  _forceLoad = function () {_mrn = _mrni.value; _read();};
 
- _mrn = $$.Utils.queryParam('id');
-//_mrn = 3;
+// _mrn = $$.Utils.queryParam('id');
+_mrn = 3;
 
  if (isNaN(parseInt(_mrn, 10))) {
   _man = document.createElement("div");
