Switch from internal test input back to interface.

--- a/src/summary.html
+++ b/src/summary.html
@@ -223,8 +223,8 @@ console.log(____s[1]);
 
  _forceLoad = function () {_mrn = _mrni.value; _read();};
 
-// _mrn = $$.Utils.queryParam('id');
-_mrn = 3;
+ _mrn = $$.Utils.queryParam('id');
+//_mrn = 3;
 
  if (isNaN(parseInt(_mrn, 10))) {
   _man = document.createElement("div");
