WTF with FIELD_ID which was originally FIELD_NAME but not fixed due to presumption of being too-hard for the day.  Then it got changed in another file anyway...

--- a/src/sample.html
+++ b/src/sample.html
@@ -58,32 +58,32 @@
   _Transaction.executeSql("insert into summaries (patient_id, date) values (3, 3)", [], null, _DB_EXEC_ERROR);
   _Transaction.executeSql("insert into summaries (patient_id, date) values (3, 5)", [], null, _DB_EXEC_ERROR);
 
-  _Transaction.executeSql("insert into summaryValues (summary_id, field_id, dataPoint) values (1, \"History (Active)\",   1)", [], null, _DB_EXEC_ERROR);
-  _Transaction.executeSql("insert into summaryValues (summary_id, field_id, dataPoint) values (1, \"History (Inactive)\", 2)", [], null, _DB_EXEC_ERROR);
-  _Transaction.executeSql("insert into summaryValues (summary_id, field_id, dataPoint) values (1, \"Medications\",        3)", [], null, _DB_EXEC_ERROR);
-  _Transaction.executeSql("insert into summaryValues (summary_id, field_id, dataPoint) values (2, \"HR (/min)\",          9)", [], null, _DB_EXEC_ERROR);
-  _Transaction.executeSql("insert into summaryValues (summary_id, field_id, dataPoint) values (2, \"SO2 (%)\",            12)", [], null, _DB_EXEC_ERROR);
-  _Transaction.executeSql("insert into summaryValues (summary_id, field_id, dataPoint) values (3, \"History (Inactive)\", 15)", [], null, _DB_EXEC_ERROR);
-  _Transaction.executeSql("insert into summaryValues (summary_id, field_id, dataPoint) values (4, \"History (Active)\",   16)", [], null, _DB_EXEC_ERROR);
-  _Transaction.executeSql("insert into summaryValues (summary_id, field_id, dataPoint) values (4, \"History (Inactive)\", 17)", [], null, _DB_EXEC_ERROR);
+  _Transaction.executeSql("insert into summaryValues (summary_id, field_id, dataPoint) values (1, 7,   1)", [], null, _DB_EXEC_ERROR);
+  _Transaction.executeSql("insert into summaryValues (summary_id, field_id, dataPoint) values (1, 8,   2)", [], null, _DB_EXEC_ERROR);
+  _Transaction.executeSql("insert into summaryValues (summary_id, field_id, dataPoint) values (1, 9,   3)", [], null, _DB_EXEC_ERROR);
+  _Transaction.executeSql("insert into summaryValues (summary_id, field_id, dataPoint) values (2, 13,  9)", [], null, _DB_EXEC_ERROR);
+  _Transaction.executeSql("insert into summaryValues (summary_id, field_id, dataPoint) values (2, 16, 12)", [], null, _DB_EXEC_ERROR);
+  _Transaction.executeSql("insert into summaryValues (summary_id, field_id, dataPoint) values (3, 8,  15)", [], null, _DB_EXEC_ERROR);
+  _Transaction.executeSql("insert into summaryValues (summary_id, field_id, dataPoint) values (4, 7,  16)", [], null, _DB_EXEC_ERROR);
+  _Transaction.executeSql("insert into summaryValues (summary_id, field_id, dataPoint) values (4, 8,  17)", [], null, _DB_EXEC_ERROR);
 
-  _Transaction.executeSql("insert into dataPoints (patient_id, status, timeIn, timeFor, timeOut, user, device, field_id, value) values (1, \"valid\", 1, 1, 1, 1, \"device1\", \"History (Active)\",      \"HTN\nHCL\nOSA\")", [], null, _DB_EXEC_ERROR);
-  _Transaction.executeSql("insert into dataPoints (patient_id, status, timeIn, timeFor, timeOut, user, device, field_id, value) values (1, \"valid\", 1, 1, 1, 1, \"device1\", \"History (Inactive)\",    \"TKR\nT&A\nPTx\")", [], null, _DB_EXEC_ERROR);
-  _Transaction.executeSql("insert into dataPoints (patient_id, status, timeIn, timeFor, timeOut, user, device, field_id, value) values (1, \"valid\", 1, 1, 1, 1, \"device1\", \"Medications\",           \"midazolam\")", [], null, _DB_EXEC_ERROR);
-  _Transaction.executeSql("insert into dataPoints (patient_id, status, timeIn, timeFor, timeOut, user, device, field_id, value) values (1, \"valid\", 1, 1, 1, 1, \"device1\", \"Allergies / Reactions\", \"nkda\")", [], null, _DB_EXEC_ERROR);
-  _Transaction.executeSql("insert into dataPoints (patient_id, status, timeIn, timeFor, timeOut, user, device, field_id, value) values (1, \"valid\", 1, 1, 1, 1, \"device1\", \"Alerts\",                \"missing\")", [], null, _DB_EXEC_ERROR);
-  _Transaction.executeSql("insert into dataPoints (patient_id, status, timeIn, timeFor, timeOut, user, device, field_id, value) values (2, \"valid\", 1, 1, 1, 1, \"device1\", \"Ca++ (mmol/L)\",         \"2.20\")", [], null, _DB_EXEC_ERROR);
-  _Transaction.executeSql("insert into dataPoints (patient_id, status, timeIn, timeFor, timeOut, user, device, field_id, value) values (2, \"valid\", 2, 1, 1, 1, \"device1\", \"Mg++ (mmol/L)\",         \"0.95\")", [], null, _DB_EXEC_ERROR);
-  _Transaction.executeSql("insert into dataPoints (patient_id, status, timeIn, timeFor, timeOut, user, device, field_id, value) values (2, \"valid\", 3, 1, 1, 1, \"device1\", \"PO4--- (mmol/L)\",       \"1.33\")", [], null, _DB_EXEC_ERROR);
-  _Transaction.executeSql("insert into dataPoints (patient_id, status, timeIn, timeFor, timeOut, user, device, field_id, value) values (2, \"valid\", 4, 1, 1, 1, \"device1\", \"HR (/min)\",             \"75\")", [], null, _DB_EXEC_ERROR);
-  _Transaction.executeSql("insert into dataPoints (patient_id, status, timeIn, timeFor, timeOut, user, device, field_id, value) values (2, \"valid\", 5, 1, 1, 1, \"device1\", \"BP (mmHg)\",             \"120/80\")", [], null, _DB_EXEC_ERROR);
-  _Transaction.executeSql("insert into dataPoints (patient_id, status, timeIn, timeFor, timeOut, user, device, field_id, value) values (2, \"valid\", 6, 1, 1, 1, \"device1\", \"RR (/min)\",             \"15\")", [], null, _DB_EXEC_ERROR);
-  _Transaction.executeSql("insert into dataPoints (patient_id, status, timeIn, timeFor, timeOut, user, device, field_id, value) values (2, \"valid\", 7, 1, 1, 1, \"device1\", \"SO2 (%)\",               \"99\")", [], null, _DB_EXEC_ERROR);
-  _Transaction.executeSql("insert into dataPoints (patient_id, status, timeIn, timeFor, timeOut, user, device, field_id, value) values (2, \"valid\", 1, 1, 1, 1, \"device1\", \"T (°C)\",                \"36.6\")", [], null, _DB_EXEC_ERROR);
-  _Transaction.executeSql("insert into dataPoints (patient_id, status, timeIn, timeFor, timeOut, user, device, field_id, value) values (3, \"valid\", 1, 1, 1, 1, \"device1\", \"History (Inactive)\",    \"TKR\nT&A\nPTx\")", [], null, _DB_EXEC_ERROR);
-  _Transaction.executeSql("insert into dataPoints (patient_id, status, timeIn, timeFor, timeOut, user, device, field_id, value) values (3, \"valid\", 3, 1, 1, 1, \"device1\", \"History (Inactive)\",    \"THR\nT&A\nPTx\")", [], null, _DB_EXEC_ERROR);
-  _Transaction.executeSql("insert into dataPoints (patient_id, status, timeIn, timeFor, timeOut, user, device, field_id, value) values (3, \"valid\", 5, 1, 1, 1, \"device1\", \"History (Active)\",      \"HTN\nHCL\nCVA\")", [], null, _DB_EXEC_ERROR);
-  _Transaction.executeSql("insert into dataPoints (patient_id, status, timeIn, timeFor, timeOut, user, device, field_id, value) values (3, \"valid\", 5, 1, 1, 1, \"device1\", \"History (Inactive)\",    \"THR\nD&C\nPTx\")", [], null, _DB_EXEC_ERROR);
+  _Transaction.executeSql("insert into dataPoints (patient_id, status, timeIn, timeFor, timeOut, user, device, field_id, value) values (1, \"valid\", 1, 1, 1, 1, \"device1\", 7,    \"HTN\nHCL\nOSA\")", [], null, _DB_EXEC_ERROR);
+  _Transaction.executeSql("insert into dataPoints (patient_id, status, timeIn, timeFor, timeOut, user, device, field_id, value) values (1, \"valid\", 1, 1, 1, 1, \"device1\", 8,    \"TKR\nT&A\nPTx\")", [], null, _DB_EXEC_ERROR);
+  _Transaction.executeSql("insert into dataPoints (patient_id, status, timeIn, timeFor, timeOut, user, device, field_id, value) values (1, \"valid\", 1, 1, 1, 1, \"device1\", 9,    \"midazolam\")", [], null, _DB_EXEC_ERROR);
+  _Transaction.executeSql("insert into dataPoints (patient_id, status, timeIn, timeFor, timeOut, user, device, field_id, value) values (1, \"valid\", 1, 1, 1, 1, \"device1\", 10,   \"nkda\")", [], null, _DB_EXEC_ERROR);
+  _Transaction.executeSql("insert into dataPoints (patient_id, status, timeIn, timeFor, timeOut, user, device, field_id, value) values (1, \"valid\", 1, 1, 1, 1, \"device1\", 11,   \"missing\")", [], null, _DB_EXEC_ERROR);
+  _Transaction.executeSql("insert into dataPoints (patient_id, status, timeIn, timeFor, timeOut, user, device, field_id, value) values (2, \"valid\", 1, 1, 1, 1, \"device1\", 44,   \"2.20\")", [], null, _DB_EXEC_ERROR);
+  _Transaction.executeSql("insert into dataPoints (patient_id, status, timeIn, timeFor, timeOut, user, device, field_id, value) values (2, \"valid\", 2, 1, 1, 1, \"device1\", 45,   \"0.95\")", [], null, _DB_EXEC_ERROR);
+  _Transaction.executeSql("insert into dataPoints (patient_id, status, timeIn, timeFor, timeOut, user, device, field_id, value) values (2, \"valid\", 3, 1, 1, 1, \"device1\", 46,   \"1.33\")", [], null, _DB_EXEC_ERROR);
+  _Transaction.executeSql("insert into dataPoints (patient_id, status, timeIn, timeFor, timeOut, user, device, field_id, value) values (2, \"valid\", 4, 1, 1, 1, \"device1\", 13,   \"75\")", [], null, _DB_EXEC_ERROR);
+  _Transaction.executeSql("insert into dataPoints (patient_id, status, timeIn, timeFor, timeOut, user, device, field_id, value) values (2, \"valid\", 5, 1, 1, 1, \"device1\", 14,   \"120/80\")", [], null, _DB_EXEC_ERROR);
+  _Transaction.executeSql("insert into dataPoints (patient_id, status, timeIn, timeFor, timeOut, user, device, field_id, value) values (2, \"valid\", 6, 1, 1, 1, \"device1\", 15,   \"15\")", [], null, _DB_EXEC_ERROR);
+  _Transaction.executeSql("insert into dataPoints (patient_id, status, timeIn, timeFor, timeOut, user, device, field_id, value) values (2, \"valid\", 7, 1, 1, 1, \"device1\", 16,   \"99\")", [], null, _DB_EXEC_ERROR);
+  _Transaction.executeSql("insert into dataPoints (patient_id, status, timeIn, timeFor, timeOut, user, device, field_id, value) values (2, \"valid\", 1, 1, 1, 1, \"device1\", 17,   \"36.6\")", [], null, _DB_EXEC_ERROR);
+  _Transaction.executeSql("insert into dataPoints (patient_id, status, timeIn, timeFor, timeOut, user, device, field_id, value) values (3, \"valid\", 1, 1, 1, 1, \"device1\", 8,    \"TKR\nT&A\nPTx\")", [], null, _DB_EXEC_ERROR);
+  _Transaction.executeSql("insert into dataPoints (patient_id, status, timeIn, timeFor, timeOut, user, device, field_id, value) values (3, \"valid\", 3, 1, 1, 1, \"device1\", 8,    \"THR\nT&A\nPTx\")", [], null, _DB_EXEC_ERROR);
+  _Transaction.executeSql("insert into dataPoints (patient_id, status, timeIn, timeFor, timeOut, user, device, field_id, value) values (3, \"valid\", 5, 1, 1, 1, \"device1\", 7,    \"HTN\nHCL\nCVA\")", [], null, _DB_EXEC_ERROR);
+  _Transaction.executeSql("insert into dataPoints (patient_id, status, timeIn, timeFor, timeOut, user, device, field_id, value) values (3, \"valid\", 5, 1, 1, 1, \"device1\", 8,    \"THR\nD&C\nPTx\")", [], null, _DB_EXEC_ERROR);
 
   _Transaction.executeSql("insert into fields (sortOrder, label, key) values ( 1, \"Lastname\",                       \"Lastname\"  )", [], null, _DB_EXEC_ERROR);
   _Transaction.executeSql("insert into fields (sortOrder, label, key) values ( 2, \"Firstname\",                      \"Firstname\" )", [], null, _DB_EXEC_ERROR);
