--- a/src/summary.html
+++ b/src/summary.html
@@ -60,7 +60,7 @@
       ___Transaction.executeSql("select * from summaries where patient_id = " + _mrn + " order by date desc limit 1", [], function (____Transaction, __Result) {
        _DB.transaction (function (_____Transaction) {
         _sid = __Result.rows.item(0).id;
-        _____Transaction.executeSql("select * from summaries inner join summaryValues on summaries.rowid = summaryValues.summary_id inner join dataPoints on summaryValues.dataPoint = dataPoints.rowid inner join fields on dataPoints.field_id = fields.label where summaries.rowid = " + __Result.rows.item(0).id + " order by fields.sortOrder", [], _show, _DB_EXEC_ERROR);
+        _____Transaction.executeSql("select * from summaries inner join summaryValues on summaries.rowid = summaryValues.summary_id inner join dataPoints on summaryValues.dataPoint = dataPoints.rowid inner join fields on dataPoints.field_id = fields.id where summaries.rowid = " + __Result.rows.item(0).id + " order by fields.sortOrder", [], _show, _DB_EXEC_ERROR);
        }, _DB_TRANS_ERROR, null);
       }, _DB_EXEC_ERROR);
      }, _DB_TRANS_ERROR, null);
@@ -85,13 +85,13 @@
   var __n;
   _summary = _Result.rows;
   for (__n = 0, __l = _Result.rows.length; __n < __l; __n++) {
-   console.log("Row / ID = " + __n + " Field = " + _Result.rows.item(__n).field_id + " Value = " + _Result.rows.item(__n).value);
+   console.log("Row / ID = " + __n + " Field = " + _Result.rows.item(__n).label + " Value = " + _Result.rows.item(__n).value);
    _e2 = document.createElement("div");
    if (_Result.rows.item(__n).
 value.indexOf('\n') == -1) {
     _el.appendChild(_e2);
     _e3 = document.createElement("span");
-    _e3.appendChild(document.createTextNode(_Result.rows.item(__n).field_id + ": "));
+    _e3.appendChild(document.createTextNode(_Result.rows.item(__n).label + ": "));
     _e3.style.fontWeight = "bold";
     _e2.appendChild(_e3);
     _e3 = document.createElement("span");
@@ -100,7 +100,7 @@ value.indexOf('\n') == -1) {
    } else {
     _el.appendChild(_e2);
     _e3 = document.createElement("div");
-    _e3.appendChild(document.createTextNode(_Result.rows.item(__n).field_id + ":"));
+    _e3.appendChild(document.createTextNode(_Result.rows.item(__n).label + ":"));
     _e3.style.fontWeight = "bold";
     _e2.appendChild(_e3);
     _e3 = document.createElement("div");
@@ -137,7 +137,7 @@ value.indexOf('\n') == -1) {
      _el.appendChild(_e2);
      if (___Result.rows.item(___n).value.indexOf('\n') == -1) {
       _e3 = document.createElement("span");
-      _e3.appendChild(document.createTextNode("[" + _YYYYMMDD(new Date(___Result.rows.item(___n).timeFor * 1000)) + "] " + ___Result.rows.item(___n).field_id + ": "));
+      _e3.appendChild(document.createTextNode("[" + _YYYYMMDD(new Date(___Result.rows.item(___n).timeFor * 1000)) + "] " + ___Result.rows.item(___n).field_id.toString(10) + ": "));
       _e3.style.fontWeight = "bold";
       _e2.appendChild(_e3);
       _e3 = document.createElement("span");
@@ -145,7 +145,7 @@ value.indexOf('\n') == -1) {
       _e2.appendChild(_e3);
      } else {
       _e3 = document.createElement("div");
-      _e3.appendChild(document.createTextNode("[" + _YYYYMMDD(new Date(___Result.rows.item(___n).timeFor * 1000)) + "] " + ___Result.rows.item(___n).field_id + ":"));
+      _e3.appendChild(document.createTextNode("[" + _YYYYMMDD(new Date(___Result.rows.item(___n).timeFor * 1000)) + "] " + ___Result.rows.item(___n).field_id.toString(10) + ":"));
       _e3.style.fontWeight = "bold";
       _e2.appendChild(_e3);
       _e3 = document.createElement("div");
@@ -159,8 +159,8 @@ value.indexOf('\n') == -1) {
      _e4.type = "checkbox";
      _updates[___n] = {
       e: _e4,
-      l: ___Result.rows.item(___n).field_id,
-      id: ___Result.rows.item(___n).id
+      fid: ___Result.rows.item(___n).field_id,
+      dp: ___Result.rows.item(___n).id
      };
      _e3.appendChild(_e4);
      _e3.appendChild(document.createTextNode("use for new summary"));
@@ -175,9 +175,10 @@ value.indexOf('\n') == -1) {
      var ____n, ____nn;
      var ____s = [];
      var ____u;
+console.log(_summary);
      for (____nn = 0; ____nn < _summary.length; ____nn++) {
       ____s[____nn] = {
-       l: _summary.item(____nn).field_id,
+       fid: _summary.item(____nn).field_id,
        dp: _summary.item(____nn).dataPoint
       }
      }
@@ -185,18 +186,18 @@ value.indexOf('\n') == -1) {
       if (_updates[____n].e.checked) {
        ____u = false;
        for (____nn = 0; ____nn < ____s.length; ____nn++) {
-        if (____s[____nn].l == _updates[____n].l) {
-         ____s[____nn].dp = _updates[____n].id;
+        if (____s[____nn].fid == _updates[____n].fid) {
+         ____s[____nn].dp = _updates[____n].dp;
          ____u = true;
         }
        }
        if (!____u) {
         ____s[____nn] = {
-         l: _updates[____n].l,
-         dp: _updates[____n].id
+         fid: _updates[____n].fid,
+         dp: _updates[____n].dp
         }
        }
-       console.log(_updates[____n].id);
+       console.log(_updates[____n].dp);
       }
      }
 console.log(____s[0]);
@@ -214,7 +215,7 @@ console.log(____s[1]);
    __Transaction.executeSql("insert into summaries (patient_id, date) values (" + _mrn.toString(10) + ", " + (d = new Date().getTime().toString(10)) + ")", [], null, _DB_EXEC_ERROR);
    __Transaction.executeSql("select * from summaries where patient_id = " + _mrn.toString(10) + " and date = " + d, [], function (___Transaction, ___Result) {
     for (__n = 0, __l = _S.length; __n < __l; __n++) {
-     __Transaction.executeSql("insert into summaryValues (summary_id, field_id, dataPoint) values (" + ___Result.rows.item(0).id + ", \"" + _S[__n].l + "\", " + _S[__n].dp + ")", [], null, _DB_EXEC_ERROR);
+     __Transaction.executeSql("insert into summaryValues (summary_id, field_id, dataPoint) values (" + ___Result.rows.item(0).id + ", \"" + _S[__n].fid + "\", " + _S[__n].dp + ")", [], null, _DB_EXEC_ERROR);
     }
 
    }, _DB_EXEC_ERROR);
