add erase db button

--- a/src/patients.html
+++ b/src/patients.html
@@ -27,6 +27,7 @@
     <div id='tools'>
       <input id='add-patient' type='button' value='add patient'>
       <input id='reset-database' type='button' value='reset db'>
+      <input id='erase-database' type='button' value='erase db'>
     </div>
     <script type='text/javascript' src='models.js'></script>
     <script type='text/javascript' src='patients.js'></script>
