--- a/src/dataentry.html
+++ b/src/dataentry.html
@@ -6,6 +6,10 @@
 		<script>
 			var patient_id = $$.Utils.queryParam('id');
 			
+			$$.Summary.getFields(patient_id, 2, function(results) {
+				$('#patientname').html (results.rows.item(0).value);
+			});
+			
 			var keys = [];
 			$$.Field.getAll(function (results) {
 				var rl = results.rows.length;
@@ -76,6 +80,7 @@
 	</head>
 	<body>
 		<h3>Current Patient: <span id="patientname"></span></h3>
+		<h4><a href='summary.html' id="backbutton">Back</a><h4>
 			<div id="Data">
 				<input onchange="return processLine('#cursorbox');" type="text" id="cursorbox" size="150">
 			</div>
