--- a/src/summary.html
+++ b/src/summary.html
@@ -54,12 +54,17 @@
 
  _read = function () {
   _DB.transaction (function (_Transaction) {
+console.log("select * from summaries where patient_id = " + _mrn);
    _Transaction.executeSql("select * from summaries where patient_id = " + _mrn, [], function (__Transaction, __Result) {
+console.log(__Result.rows.length);
     if (__Result.rows.length > 0) {
      _DB.transaction (function (___Transaction) {
+console.log("select * from summaries where patient_id = " + _mrn + " order by date desc limit 1");
       ___Transaction.executeSql("select * from summaries where patient_id = " + _mrn + " order by date desc limit 1", [], function (____Transaction, __Result) {
+console.log(__Result.rows.length);
        _DB.transaction (function (_____Transaction) {
         _sid = __Result.rows.item(0).id;
+console.log("select * from summaries inner join summaryValues on summaries.rowid = summaryValues.summary_id inner join dataPoints on summaryValues.dataPoint = dataPoints.rowid inner join fields on dataPoints.field_id = fields.id where summaries.rowid = " + __Result.rows.item(0).id + " order by fields.sortOrder");
         _____Transaction.executeSql("select * from summaries inner join summaryValues on summaries.rowid = summaryValues.summary_id inner join dataPoints on summaryValues.dataPoint = dataPoints.rowid inner join fields on dataPoints.field_id = fields.id where summaries.rowid = " + __Result.rows.item(0).id + " order by fields.sortOrder", [], _show, _DB_EXEC_ERROR);
        }, _DB_TRANS_ERROR, null);
       }, _DB_EXEC_ERROR);
@@ -84,11 +89,11 @@
   var __l;
   var __n;
   _summary = _Result.rows;
+console.log(_summary.length);
   for (__n = 0, __l = _Result.rows.length; __n < __l; __n++) {
    console.log("Row / ID = " + __n + " Field = " + _Result.rows.item(__n).label + " Value = " + _Result.rows.item(__n).value);
    _e2 = document.createElement("div");
-   if (_Result.rows.item(__n).
-value.indexOf('\n') == -1) {
+   if (_Result.rows.item(__n).value.indexOf('\n') == -1) {
     _el.appendChild(_e2);
     _e3 = document.createElement("span");
     _e3.appendChild(document.createTextNode(_Result.rows.item(__n).label + ": "));
@@ -127,9 +132,11 @@ value.indexOf('\n') == -1) {
   _el.appendChild(_e2);
   _e2.appendChild(document.createTextNode("Full Record"));
   _DB.transaction (function (__Transaction) {
+console.log("select * from dataPoints where patient_id = " + _mrn.toString(10) + " and status = \"valid\" order by timeFor");
    __Transaction.executeSql("select * from dataPoints where patient_id = " + _mrn.toString(10) + " and status = \"valid\" order by timeFor", [], function (___Transaction, ___Result) {
     var ___l;
     var ___n;
+console.log(___Result.rows.length);
     for (___n = 0, ___l = ___Result.rows.length; ___n < ___l; ___n++) {
      _e2 = document.createElement("div");
      _e2.style.border = "2px solid #c0c0c0";
@@ -212,8 +219,11 @@ console.log(____s[1]);
   _DB.transaction(function (__Transaction) {
    var __d;
    var __n, __l;
+console.log("insert into summaries (patient_id, date) values (" + _mrn.toString(10) + ", " + (d = new Date().getTime().toString(10)) + ")");
    __Transaction.executeSql("insert into summaries (patient_id, date) values (" + _mrn.toString(10) + ", " + (d = new Date().getTime().toString(10)) + ")", [], null, _DB_EXEC_ERROR);
+console.log("select * from summaries where patient_id = " + _mrn.toString(10) + " and date = " + d);
    __Transaction.executeSql("select * from summaries where patient_id = " + _mrn.toString(10) + " and date = " + d, [], function (___Transaction, ___Result) {
+
     for (__n = 0, __l = _S.length; __n < __l; __n++) {
      __Transaction.executeSql("insert into summaryValues (summary_id, field_id, dataPoint) values (" + ___Result.rows.item(0).id + ", \"" + _S[__n].fid + "\", " + _S[__n].dp + ")", [], null, _DB_EXEC_ERROR);
     }
@@ -224,8 +234,8 @@ console.log(____s[1]);
 
  _forceLoad = function () {_mrn = _mrni.value; _read();};
 
- _mrn = $$.Utils.queryParam('id');
-//_mrn = 3;
+// _mrn = $$.Utils.queryParam('id');
+_mrn = 3;
 
  if (isNaN(parseInt(_mrn, 10))) {
   _man = document.createElement("div");
