--- a/src/dataentry.html
+++ b/src/dataentry.html
@@ -80,7 +80,7 @@
 	</head>
 	<body>
 		<h3>Current Patient: <span id="patientname"></span></h3>
-		<h4><a href='summary.html' id="backbutton">Back</a><h4>
+		<h4><a href='summary.html' id="backbutton">Back</a></h4>
 			<div id="Data">
 				<input onchange="return processLine('#cursorbox');" type="text" id="cursorbox" size="150">
 			</div>
